# pi-pico-usb-hid-forward

./: .gitmodules  CMakeLists.txt  FreeRTOS_Kernel_import.cmake  LICENSE.txt  README.md
src/: main.cpp
src/config/: FreeRTOSConfig.h  tusb_config.h
src/usb/: usb_descriptors.c  usb_descriptors.h
src/usb/device/: device_callbacks.cpp  hid.cpp  hid.hpp
src/usb/host/: host_callbacks.cpp
